# VitaCompat

./: CMakeLists.txt  Makefile  README.md  main.c
include/: filesystem.h  popspatch.h
rebootex/: CMakeLists.txt  Makefile  patches.c
src/: fatef.c  filesystem.c  flashfs.c  popspatch.c  syspatch.c  vitamem.c  vlf.c
